<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".bill.DonDat">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txtViewHoaDonBanHang" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewMaDDH" />

        <EditText
            android:id="@+id/edtTextHoaDon_MaHD"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnHoaDon_Check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edtTextHoaDon_MaHD"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewHoTenKH" />

        <EditText
            android:id="@+id/edtTextHoaDon_HoTenKH"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewCMND" />

        <EditText
            android:id="@+id/edtTextHoaDon_CMNDKH"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewDiaChiKH" />

        <EditText
            android:id="@+id/edtTextHoaDon_DiaChi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/autcplDanhSach"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btnCapNhap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewCapNhat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <TableLayout
            android:id="@+id/tblayoutBang"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtViewHoaDon_Ma"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/txtViewHoaDon_Ten"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />


                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtViewSoLuong" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtViewDonGia" />

            </TableRow>

        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewThanhTien" />

        <EditText
            android:id="@+id/edtHoaDon_ThanhTien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/btnXong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnXong" />

</LinearLayout>