<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".brand.BrandDetailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand_detail"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand_id"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/tvBrandId"
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#2483CD"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imvBrandLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/ic_launcher_foreground"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand_name"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/etBrandName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/brand_name_input"
            android:textSize="20sp"
            android:textColor="#2483CD"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand_address"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/etBrandAddress"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/brand_address_input"
            android:textSize="20sp"
            android:textColor="#2483CD"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand_phone"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/etBrandPhone"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/brand_phone_input"
            android:textSize="20sp"
            android:textColor="#2483CD"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand_email"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/etBrandEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/brand_email_input"
            android:textSize="20sp"
            android:textColor="#2483CD"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbLoadingBrandDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvBrandRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/icon_refresh"
            android:textSize="30sp"
            android:textColor="@color/icon_selector"
            android:clickable="true"
            android:gravity="right"
            android:paddingRight="50dp"/>

        <TextView
            android:id="@+id/tvBrandSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/icon_save"
            android:textSize="30sp"
            android:textColor="@color/icon_selector"
            android:clickable="true"
            android:gravity="left"
            android:paddingLeft="50dp"/>

    </LinearLayout>

</LinearLayout>